# codebot

./: .env.example  README.md  README_CN.md  README_EN.md  config.yaml  package-lock.json  package.json
Code Security Testing Agent/: .gitignore  CODE_SECURITY_README.md  README.md  docker-compose.yml  nanobot.workspace.code-security.example.json  run-code-security-agent.ps1
Code Security Testing Agent/backend/: requirements-optional.txt  requirements.txt
advanced-rag/: .env.example  .gitignore  README.md  docker-compose.yml
advanced-rag/backend/: README.md  pyproject.toml
advanced-rag/backend/app/: __init__.py  main.py
advanced-rag/backend/app/agents/: __init__.py  coordinator.py  experts.py  llm.py  orchestrator.py  planner.py  specialist.py  sse.py  summary.py
advanced-rag/backend/app/api/: routes_agents.py  routes_health.py  routes_ingest.py  routes_metrics.py  routes_retrieve.py  schemas_agents.py  schemas_retrieval.py
advanced-rag/backend/app/core/: config.py  metrics.py
advanced-rag/backend/app/ingestion/: chunker.py  embeddings.py  models.py  parser.py  qdrant_store.py
advanced-rag/backend/app/retrieval/: __init__.py  bm25_index.py  neo4j_graph.py  pipeline.py  reranker.py  vector_qdrant.py
advanced-rag/backend/tests/: test_agents_sse.py  test_api_smoke.py  test_ingestion.py  test_retrieval.py
codebot/: .env.example  .gitignore  CHANGELOG.md  README.md  README_CN.md  README_EN.md  config.yaml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
docs/: RUNBOOK.md
tests/: pipeline.test.ts  task-store.test.ts
(+129 files in other folders)
