[project]
name = "advanced-rag-backend"
version = "0.1.0"
description = "Multi-agent Advanced RAG backend"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6.0",
    "qdrant-client>=1.12.0",
    "prometheus-client>=0.21.0",
    "pypdf>=5.0.0",
    "neo4j>=5.26.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.2.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]
# 若本机已装 Keras 3，导致 `import transformers` / sentence-transformers 报错，可安装：
#   pip install -e ./backend[tf-keras-compat]
tf-keras-compat = [
    "tf-keras>=2.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
